--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -47,6 +47,7 @@
                                 <td><a href="#">View</a></td>
                             </tr>
                             <tr th:each="recipe : ${recipes}">
+                                <!--/*@thymesVar id="recipe" type="guru.springframework.spring5recipeapp.domain.Recipe"*/-->
                                 <td th:text="${recipe.id}">345</td>
                                 <td th:text="${recipe.description}">Tasty Goodnees 3</td>
                                 <td>
