--- a/src/main/resources/templates/404error.html
+++ b/src/main/resources/templates/404error.html
@@ -21,8 +21,9 @@
 
 <div class="container-fluid" style="margin-top:20px;">
     <div class="row">
-        <div class="col-md6 col-offset-3">
+        <div class="col-md6 col-md-offset-3">
             <h1>404 Not Found</h1>
+            <p th:text="${exception.getMessage()}"></p>
         </div>
     </div>
 </div>
